--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -330,10 +330,10 @@
     {
      "data": {
       "text/plain": [
-       "<filter at 0x7f2f54767898>"
+       "<filter at 0x7f2f54767be0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
